--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="instagramWrapper">
         <div class="instagram-phone">
-            <img src="./img/phone.png" alt="Imagem de um celular" srcset="" >
+            <img src="./img/instagram-celular.png" alt="Imagem de um celular" srcset="" >
         </div>
         <div class="instagram-content">
             <div class="group">
@@ -20,21 +20,19 @@
                     <input type="text" class="password" placeholder="Senha" style="text-align: left">
                     <button type="submit" class="btn-submit">Entrar</button>
                 </div>
-                
                 <p class="text">OU</p>
                 <a href="#" class="Link">Entrar com o Facebook</a>
                 <a href="" class="Link">Esqueceu a senha?</a>
             </div>
             <div class="group">Nao tem uma conta?<a href="http://"> Cadastre-se</a></div>
+            <p class="app">Obtenha o app</p>
             <div class="Apps">
-                <p>Baixe o app</p>
+                
                 <a href="http://"><img src="./img/btnGoogle.png" alt="Google Play" class="apple"></a>
                 <a href="http://"><img src="./img/btnApple.png" alt="Apple Store" class="google"></a>
             </div>
         </div>
     </div>
-    <footer class="footer">
-
-    </footer>
+    <footer class="footer"></footer>
 </body>
 </html>
